<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ktv_app_name">KTV</string>

    <string name="ktv_ok">OK</string>
    <string name="ktv_done">Done</string>
    <string name="ktv_search">Search</string>
    <string name="ktv_confirm">Confirm</string>
    <string name="ktv_cancel">Cancel</string>

    <string name="ktv_error_permisstion">Please open the permission first</string>

    <string name="ktv_room_list_title">Room</string>
    <string name="ktv_room_list_empty">Please create a song room</string>

    <string name="ktv_create_room_name_label">Room name</string>
    <string name="ktv_create_room_name_label2">The application is for test purpose only, please do not use it for commercial purpose. The longest duration per session is 10 minutes, and the maximum of participants per channel is 10.</string>
    <string name="ktv_create_button">Start</string>

    <string name="ktv_dialog_join_msg">Preparing…</string>

    <string name="ktv_room_before_speaker">After wheat, you can order songs and speak</string>
    <string name="ktv_room_owner">Host</string>
    <string name="ktv_room_sing1">Singing</string>
    <string name="ktv_room_sing1_1">In chorus</string>
    <string name="ktv_room_original">Original</string>
    <string name="ktv_room_accompany">Accompaniment</string>
    <string name="ktv_room_change_song">Cut song</string>
    <string name="ktv_room_seat_off">Seat off</string>
    <string name="ktv_room_cut_off_song">Cut Off</string>
    <string name="ktv_room_choose_song">Sing</string>
    <string name="ktv_room_choosed_song">Requested</string>
    <string name="ktv_room_sing2">Singing</string>
    <string name="ktv_room_no_sing">There\'s no one singing now\nClick "Sing" to pick a song and start singing</string>
    <string name="ktv_dialog_migu_tip">The music is provided by MIGU music</string>
    <string name="ktv_dialog_music_list_empty">No related search results were found</string>
    <string name="ktv_dialog_music_list_search_hint">Search</string>
    <string name="ktv_lrc_loading">Loading</string>
    <string name="ktv_lrc_load_fail">Loading failed</string>
    <string name="ktv_room_change_music_title">Cut song</string>
    <string name="ktv_room_change_music_msg">Terminate the current song?</string>
    <string name="ktv_room_time_wait_join_chorus">Waiting for others to join the chorus %02d:%02d</string>
    <string name="ktv_room_time_join_chorus_">Join countdown %02d:%02d</string>
    <string name="ktv_music_join_chorus">Join the chorus</string>
    <string name="ktv_music_chorus_start_now">Sing by myself</string>
    <string name="ktv_use_overtime">Trial time has expired</string>
    <string name="ktv_need_up">Please seat up first</string>
    <string name="ktv_error_cut">This song can\'t be switched</string>
    <string name="ktv_join_error">Failed to join the room</string>
    <string name="ktv_sync_music_error">Sync song failed</string>
    <string name="ktv_leave_title">Exit</string>
    <string name="ktv_leave_msg">All members will be removed after closing the room.</string>

    <string name="ktv_music_menu_dialog_title">Sound effect settings</string>
    <string name="ktv_music_menu_dialog_ear">Headphone Foldback</string>
    <string name="ktv_music_menu_dialog_tone">Change Tone</string>
    <string name="ktv_music_menu_dialog_vol1">Vocal volume</string>
    <string name="ktv_music_menu_dialog_vol2">Music volume</string>
    <string name="ktv_music_menu_dialog_effect">Effects</string>

    <string name="ktv_network_unavailable">Network unavailable, sure to continue?</string>

    <string name="ktv_permission_alert">Sure to request Required permission？</string>
    <string name="ktv_permission_refused">Necessary permissions to run this function have not been granted.</string>


    <string name="ktv_beauty_voice">Beauty Voice</string>
    <string name="ktv_beauty_effect">Beauty Effect</string>
    <string name="ktv_camera">Camera</string>
    
    
<!--    Content Description-->
    <string name="ktv_create_room">create room</string>
    <string name="ktv_toggle_mic">mute mic or not</string>
    <string name="ktv_choose_cover">choose the cover you like</string>
    <string name="ktv_chorus">chorus</string>
    <string name="ktv_order_song">order</string>
    <string name="ktv_random_room_name">Get a random room name</string>
    <string name="ktv_tone_down">Click to set tone down</string>
    <string name="ktv_tone_up">Click to set tone up</string>

<!--    String formatter-->
    <string name="song_and_singer" translatable="false">%s - %s</string>
    <string name="score_formatter" translatable="false">Score: %.2f</string>
</resources>
