<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ktv_shape_bottom_dialog_background"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ktv_music_menu_dialog_title"
        android:textColor="#EEEEEE" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ktv_music_menu_dialog_ear"
            android:textColor="#9BA2AB" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchEar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:trackTint="@color/ktv_alphaColorAccent"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/ktv_music_menu_dialog_vol1"
            android:textColor="#9BA2AB" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sbVol1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:haloColor="@android:color/transparent"
            app:thumbRadius="15dp"
            app:thumbColor="@android:color/black"
            app:thumbStrokeColor="@color/ktv_colorAccent"
            app:thumbStrokeWidth="8dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/ktv_music_menu_dialog_vol1"
            android:valueFrom="0"
            android:valueTo="100" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/ktv_music_menu_dialog_vol2"
            android:textColor="#9BA2AB" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sbVol2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:thumbRadius="15dp"
            app:thumbColor="@android:color/black"
            app:thumbStrokeColor="@color/ktv_colorAccent"
            app:thumbStrokeWidth="8dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/ktv_music_menu_dialog_vol2"
            android:valueFrom="0"
            android:valueTo="100" />
    </LinearLayout>

</LinearLayout>